[gd_scene load_steps=3 format=3 uid="uid://ini601lpdqfe"]

[ext_resource type="PackedScene" uid="uid://hv6abr45mo66" path="res://scenes/input_control.tscn" id="1_tlwrc"]
[ext_resource type="Script" path="res://scenes/manager.gd" id="1_ub3ly"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ub3ly")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CornerMargins" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MainSpliterContainer" type="HBoxContainer" parent="Panel/CornerMargins"]
layout_mode = 2

[node name="Sidebar" type="MarginContainer" parent="Panel/CornerMargins/MainSpliterContainer"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="SidebarContentContainer" type="VBoxContainer" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="Controls" type="VBoxContainer" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="InputsCount" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls" instance=ExtResource("1_tlwrc")]
unique_name_in_owner = true
layout_mode = 2
value = "0"
text = "Inputs Count:"
initial_value = "0"
force_int = true
force_min = true

[node name="ActivationFunction" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls" instance=ExtResource("1_tlwrc")]
unique_name_in_owner = true
layout_mode = 2
value = "None"
text = "Activation Function:"
options = Array[String](["None", "Sigmoid", "Tanh", "Linear"])
initial_value = "0"
input_type = "OptionButton"

[node name="LayersCount" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls" instance=ExtResource("1_tlwrc")]
unique_name_in_owner = true
layout_mode = 2
value = "0"
text = "Layers Count:"
initial_value = "0"
force_int = true
max_value = 5.0
force_min = true
force_max = true

[node name="Layers" type="MarginContainer" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="LayersContainer" type="VBoxContainer" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls/Layers"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls"]
layout_mode = 2
text = "NC = Neurons Count"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ApplyChanges" type="Button" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create Network"

[node name="ConnectionsButton" type="Button" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
disabled = true
text = "Connections"

[node name="LearningRate" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls" instance=ExtResource("1_tlwrc")]
unique_name_in_owner = true
layout_mode = 2
value = "0"
text = "Learning Rate:"
initial_value = "0"
force_float = true
max_value = 1.0
force_min = true
force_max = true

[node name="Epoch" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls" instance=ExtResource("1_tlwrc")]
unique_name_in_owner = true
layout_mode = 2
value = "0"
text = "Epoch:"
initial_value = "0"
force_int = true
force_min = true

[node name="FeedForwardBackwardButton" type="Button" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls"]
unique_name_in_owner = true
layout_mode = 2
text = "Feed Forward & Backward"
metadata/forward = true

[node name="ButtonsContainer" type="VBoxContainer" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SplitInHalf" type="HBoxContainer" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InputButton" type="Button" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ButtonsContainer/SplitInHalf"]
layout_mode = 2
size_flags_horizontal = 3
text = "Input"

[node name="TestButton" type="Button" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ButtonsContainer/SplitInHalf"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Test"

[node name="TrainButton" type="Button" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Train"

[node name="ResetButton" type="Button" parent="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ButtonsContainer"]
layout_mode = 2
text = "Reset"

[node name="Content" type="MarginContainer" parent="Panel/CornerMargins/MainSpliterContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ContentContainer" type="VBoxContainer" parent="Panel/CornerMargins/MainSpliterContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Neurons" type="GraphEdit" parent="Panel/CornerMargins/MainSpliterContainer/Content/ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Temporary" type="MarginContainer" parent="Panel/CornerMargins/MainSpliterContainer/Content/ContentContainer"]
layout_mode = 2

[node name="Log" type="TextEdit" parent="Panel/CornerMargins/MainSpliterContainer/Content/ContentContainer/Temporary"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Log Comes Here . . ."

[node name="Popup" type="AcceptDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(199, 100)

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(400, 500)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.csv")

[connection signal="text_changed" from="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls/LayersCount" to="." method="_on_layers_count_text_changed"]
[connection signal="button_up" from="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls/HBoxContainer/ApplyChanges" to="." method="_on_apply_changes_button_up"]
[connection signal="button_up" from="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls/HBoxContainer/ConnectionsButton" to="." method="_on_connections_button_button_up"]
[connection signal="button_up" from="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ScrollContainer/Margin/Controls/FeedForwardBackwardButton" to="." method="_on_feed_forward_backward_button_button_up"]
[connection signal="button_up" from="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ButtonsContainer/SplitInHalf/InputButton" to="." method="_on_input_button_button_up"]
[connection signal="button_up" from="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ButtonsContainer/SplitInHalf/TestButton" to="." method="_on_test_button_button_up"]
[connection signal="button_up" from="Panel/CornerMargins/MainSpliterContainer/Sidebar/SidebarContentContainer/ButtonsContainer/TrainButton" to="." method="_on_train_button_button_up"]
[connection signal="connection_request" from="Panel/CornerMargins/MainSpliterContainer/Content/ContentContainer/Neurons" to="." method="_on_neurons_connection_request"]
[connection signal="disconnection_request" from="Panel/CornerMargins/MainSpliterContainer/Content/ContentContainer/Neurons" to="." method="_on_neurons_disconnection_request"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
